# GOL

./: .gitmodules  CMakeLists.txt
lib/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/Engine/: Engine.cpp  Engine.hpp  GameStack.hpp
src/Engine/Renderer/: opengl.hpp
src/Game/: BaseScene.hpp
src/Game/MainMenu/: MainMenu.cpp  MainMenu.hpp
